fixing some spacing and padding issues

--- a/source/assets/css/casestudies/_index.css.scss
+++ b/source/assets/css/casestudies/_index.css.scss
@@ -74,7 +74,7 @@ h2.case-study-title {
 .product {
   padding: 0 flex-gutter(4);
   text-align: center;
-  margin-bottom: 120px;
+  margin-bottom: 4em;
 
   img {
     max-width: 75%;
