--- a/source/assets/css/casestudies/_vertical-mass.scss
+++ b/source/assets/css/casestudies/_vertical-mass.scss
@@ -115,13 +115,24 @@
   @extend .section-header;
   @include fill-parent;
   @include shift(0);
-  margin-top: em(120);
+  margin-top: em(150);
 
-  h2, p {
+  p {
+    text-align: left;
+  }
+
+  h2 {
     text-align: center;
+    font-size: 1.5em;
 
     @include media($large-screen-up) {
       text-align: left;
+      font-size: 1.5em
+
+      p {
+        font-size: 1.25em;
+        text-align: left;
+      }
     }
   }
 
