--- a/source/assets/css/scaffolding/_index.css.scss
+++ b/source/assets/css/scaffolding/_index.css.scss
@@ -21,12 +21,12 @@ body {
 }
 
 .section-wrap {
-  padding-top: em(80);
-  padding-bottom: em(80);
+  padding-top: em(10);
+  padding-bottom: em(10);
 
   @include media($large-screen-up) {
-    padding-top: em(160);
-    padding-bottom: em(160);
+    padding-top: em(65);
+    padding-bottom: em(65);
   }
 }
 
